styles.css
/* ... */
/* Header Section */

header {
  position: fixed;
  height: 15vh;
  width: 100%;
  background-color: var(--lm-background-main-color);
  z-index: 1000;
}

nav {
  width: 100%;
  height: 100%;
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 25px;
}

.menu__container ul {
  display: flex;
  align-items: center;
}

.menu__container ul span {
  margin: 0 5px;
}

.menu__item {
  color: var(--lm-heading-secondary-color);
}

.menu__item.active, .menu__item:hover {
  color: var(--lm-heading-main-color);
}

.dark__mode__toggle {
  position: relative;
  margin: 0 0 0 15px;
  font-size: clamp(1rem, 1.5vmin, 2rem);
  cursor: pointer;
}

.dark__mode__toggle p {
  position:absolute;
  font-size: 0.7rem;
  top: -200%;
  opacity: 0;
  left: 125%;
}

.dark__mode__toggle:hover p {
  top: 50%;
  transform: translateY(-50%);
  opacity: 1;
}

.socials__container ul {
  display: flex;
  align-items: center;
}

.socials__container ul li {
  margin: 0 25px;
}

.socials__container ul li:hover i {
  color: var(--lm-heading-secondary-color);
}

.socials__container ul li i,
.toggle__menu i {
  font-size: clamp(2rem, 3vmin, 4rem);
}

.toggle__menu {
  display: none;
  position: absolute;
  right: 25px;
  z-index: 1000;
}

.toggle__menu i {
  display: none;
  cursor: pointer;
}

.toggle__menu i.active {
  display: block;
}

.responsive__menu {
  position: absolute;
  height: 100vh;
  width: 100vw;
  top: 0;
  left: 200%;
  z-index: 999;
  background: var(--lm-background-main-color);
}

.responsive__menu.active {
  left: 0;
}

.responsive__menu ul {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.responsive__menu ul li {
  margin: 1% 0;
}

.dark__mode {
  cursor: pointer;
}

/* Section styles */

section {
  width: 100%;
  min-height: 400px;
  padding: 100px;
  margin: 50px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.section__title {
  font-size: clamp(1.5rem, 2.25vmin, 3.5rem);
  text-transform: uppercase;
  color: var(--lm-heading-main-color);
  font-weight: 900;
  padding: 0 0 25px 0;
  border-bottom: 1px solid var(--lm-section-title-border);
  margin: 0 0 50px 0;
}

/* Hero Section */

#home {
  position: relative;
  padding: 0px;
  margin: 0 0 100px 0;
  width: 100%;
  height: 100vh;
  flex-direction: row;
  justify-content: space-evenly;
  overflow: hidden;
}

.hero-container {
  width: 30%;
}

.hero-artist, .hero-name {
  margin: 10px 0;
  font-size: clamp(1rem, 4vmin, 5rem);
}

.hero-description {
  white-space: normal;
  font-size: clamp(0.85rem, 2.5vmin, 5rem);
}

.hero-cta-link i {
  margin-top: 40px;
  font-size: clamp(3rem, 10vmin, 8rem);
}

.hero-image-container {
  position: relative;
  height: 40vmin;
  width: 60vmin;
  display: flex;
  justify-content: center;
  border-radius: 20%;
  overflow: hidden;
}

.hero-image {
  object-position: 10%;
  width: auto;
  max-height: 100%;
  object-fit: cover;
}

/* Ambassadors Section */

.ambassador-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.ambassador-item {
  max-width: 40%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 25px;
}

.ambassador-item p {
  margin: 20px 0;
}

.ambassador-item a {
  padding: 8px 16px;
  border-radius: 8px;
  background-color: var(--lm-heading-main-color);
  color: var(--lm-background-main-color);
}

.ambassador-item * {
  white-space: normal;
  text-align: center;
}

/* Music Section */

.music__container {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.music__box {
  max-width: 300px;
  margin: 25px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.music__cta {
  margin: 50px;
  padding: 16px;
  border-radius: 8px;
  background-color: var(--lm-heading-main-color);
  color: var(--lm-background-main-color);
  white-space: nowrap;
}

.music__title {
  max-width: 100%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

/* News Section */

.news__container {
  width: 100%;
  display: flex;
  flex-direction:column;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.news__container div {
  min-width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 0 10px 0;
  margin: 10px 0;
  border-bottom: 1px solid var(--lm-section-title-border);
}

.news__container div:last-child {
  border-bottom: none;
}

.news__container h6 {
  width: 20%;
  white-space: normal;
}

.news__container p {
  width: 70%;
  margin: 0 25px;
  white-space: normal;
}

.news__container a {
    padding: 16px;
    border-radius: 8px;
    background-color: var(--lm-heading-main-color);
    color: var(--lm-background-main-color);
    white-space: nowrap;
  }

  /* Gallery Section */

  .gallery__container {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
  }

  .gallery__container img {
    width: 300px;
    height: 300px;
    margin: 10px;
    -o-object-fit: cover;
       object-fit: cover;
  }

/* Charity Section */

.charity-container {
  display: flex;
  justify-content: center;
  align-items: stretch;
  flex-wrap: wrap;
}

.charity-item {
  flex: 1 0 320px;
  margin: 25px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.charity-item * {
  white-space: normal;
}

.charity-item a {
  margin-top: 25px;
  padding: 8px 16px;
  border-radius: 8px;
  background-color: var(--lm-heading-main-color);
  color: var(--lm-background-main-color);
}

  /* About us Section */

  .about__container {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .about__container img {
    width: 300px;
    height: 300px;
    -o-object-fit: cover;
       object-fit: cover;
    border-radius: 16px;
  }
/* ... */

